feat: instalacion opction

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <ul class="hidden md:flex space-x-6 text-gray-700 font-semibold">
         <li><a href="#info" class="hover:text-indigo-600">¿Qué es?</a></li>
         <li><a href="#cursos" class="hover:text-indigo-600">Cursos</a></li>
+        <li><a href="instalacion.html" class="hover:text-indigo-600">Instalación</a></li>
         <li><a href="#testimonios" class="hover:text-indigo-600">Testimonios</a></li>
         <li><a href="#contacto" class="hover:text-indigo-600">Contacto</a></li>
       </ul>
